fix: add maven dependncy

--- a/back-farmacia/src/.env
+++ b/back-farmacia/src/.env
@@ -1,6 +1,3 @@
-DB_NAME=user_db
-DB_USER=gaspar
-DB_PASSWORD=armando1gaspar
-DB_HOST=localhost
-DB_PORT=5432
+
 JWT_SECRET=tu_secreto
+DATABASE_URL = postgres://user_db:armando1gaspar@localhost:5432/user_db
