--- a/back-far/users/package.json
+++ b/back-far/users/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "back-farmacia",
+  "name": "users",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,18 +12,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "prisma": "^6.3.1",
-    "sequelize": "^6.37.5"
+    "prisma": "^6.3.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.1",
     "nodemon": "^3.1.9"
   }
 }
