--- a/back-far/api-gateway/package.json
+++ b/back-far/api-gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compu",
+  "name": "api-gateway",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "prisma": "^6.3.1"
+    "http-proxy-middleware": "^3.0.3"
   }
 }
