--- a/back-far/equipos/package.json
+++ b/back-far/equipos/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@types/express": "^5.0.0",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
