--- a/front-farmacia/package.json
+++ b/front-farmacia/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@progress/kendo-react-taskboard": "^9.4.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
