--- a/front-farmacia/package.json
+++ b/front-farmacia/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
