--- a/back-far/equipos/package.json
+++ b/back-far/equipos/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "@types/express": "^5.0.0",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
