--- a/back-far/equipos/package.json
+++ b/back-far/equipos/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^2.2.0",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
