--- a/front-farmacia/package.json
+++ b/front-farmacia/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@progress/kendo-react-taskboard": "^9.4.0",
+    "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -24,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "sonner": "^1.7.4",
+    "tailwindcss": "^4.1.7",
     "yup": "^1.6.1"
   },
   "devDependencies": {
