--- a/front-farmacia/package.json
+++ b/front-farmacia/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "lightweight-charts": "^5.0.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.3",
     "sonner": "^1.7.4",
     "tailwindcss": "^4.1.7",
     "yup": "^1.6.1"
